--- a/index.html
+++ b/index.html
@@ -25,8 +25,19 @@
         <!-- <div class="btn">decimal to fraccion</div> -->
 
         <div class="formula-content-item fill">
-          <h2 class="fraction" id="numeradorText"></h2>
-          <h2 class="fraction" id="denominadorText"></h2>
+          <div class="termino">
+            <h2 class="fraction" id="numeradorText"></h2>
+            <div class="fractionLine"></div>
+            <h2 class="fraction" id="denominadorText"></h2>
+          </div>
+          <div id="primerIgual">
+            <h1>=</h1>
+          </div>
+          <div>
+            <h2 class="fraction" id="numeradorTextFactor"></h2>
+            <div class="fractionLine"></div>
+            <h2 class="fraction" id="denominadorTextFactor"></h2>
+          </div>
         </div>
       </div>
     </div>
