--- a/index.html
+++ b/index.html
@@ -25,18 +25,20 @@
         <!-- <div class="btn">decimal to fraccion</div> -->
 
         <div class="formula-content-item fill">
-          <div class="termino">
+          <div class="termino" id="mainTermn">
             <h2 class="fraction" id="numeradorText"></h2>
             <div class="fractionLine"></div>
             <h2 class="fraction" id="denominadorText"></h2>
           </div>
-          <div id="primerIgual">
-            <h1>=</h1>
-          </div>
-          <div>
+          <div class="termino" id="facTermn">
             <h2 class="fraction" id="numeradorTextFactor"></h2>
             <div class="fractionLine"></div>
             <h2 class="fraction" id="denominadorTextFactor"></h2>
+          </div>
+          <div class="termino" id="simpleTermn">
+            <h2 class="fraction" id="numeradorTextSimple"></h2>
+            <div class="fractionLine"></div>
+            <h2 class="fraction" id="denominadorTextSimple"></h2>
           </div>
         </div>
       </div>
